Backend/scripts/k8s/backend/microservices/users/instance/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ratel-backend-users
  namespace: ratel-backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratel-backend-users

  template:
    metadata:
      labels:
        app: ratel-backend-users
    spec:
      containers:
      - name: ratel-backend-users
        image: ratel_backend_users:latest
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 9000

        startupProbe:
          httpGet:
            path: /api/creatures/health/is_started
            port: 9000
          periodSeconds: 5
          failureThreshold: 30

        readinessProbe:
          httpGet:
            path: /api/creatures/health/is_ready
            port: 9000
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /api/creatures/health/is_alive
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
