Backend/scripts/k8s/backend/microservices/users/instance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratel-backend-users
  namespace: ratel-backend

spec:
  type: ClusterIP

  selector:
    app: ratel-backend-users

  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
